--- a/apps/tsconfig.node.json
+++ b/apps/tsconfig.node.json
@@ -1,29 +1,15 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
-    "lib": [
-      "ES2023",
-      "DOM"
-    ],
+    "lib": ["ES2023"],
     "moduleDetection": "force",
-    "baseUrl": ".",
     "module": "ESNext",
+
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "paths": {
-      "@/*": [
-        "./src"
-      ],
-      "~/*": [
-        "./lib"
-      ]
-    },
-    "types": [
-      "vitest/globals"
-    ],
     "allowImportingTsExtensions": true,
+
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
@@ -35,7 +21,5 @@
     "skipLibCheck": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": [
-    "test/**/*.ts"
-  ]
+  "include": ["vite.config.ts"]
 }
