--- a/ui/package.json
+++ b/ui/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "z-plus",
+  "name": "@daguanren21/z-plus",
   "type": "module",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "description": "vue lib vite lib mode template",
-  "author": "ice breaker <1324318532@qq.com>",
+  "author": "daguanren21 <1363917353@qq.com>",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sonofmagic/monorepo-template.git",
+    "url": "git+https://github.com/daguanren21/z-plus.git",
     "directory": "packages/vue-lib-template"
   },
   "bugs": {
-    "url": "https://github.com/sonofmagic/monorepo-template/issues"
+    "url": "https://github.com/daguanren21/z-plus/issues"
   },
   "keywords": [],
   "sideEffects": false,
@@ -29,7 +29,9 @@
     "test:dev": "vitest",
     "release": "pnpm publish",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "publishConfig": {
     "exports": {
@@ -42,16 +44,22 @@
     },
     "main": "./dist/index.umd.cjs",
     "module": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "types": "./dist/index.d.ts",
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "dependencies": {
     "es-toolkit": "^1.39.8"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^9.1.0",
+    "@storybook/vue3-vite": "^9.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "eslint-plugin-storybook": "^9.1.0",
     "jsdom": "^26.1.0",
+    "storybook": "^9.1.0",
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.17",
