--- a/ui/package.json
+++ b/ui/package.json
@@ -60,6 +60,7 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint-plugin-storybook": "^9.1.0",
     "jsdom": "^26.1.0",
+    "sass-embedded": "^1.89.2",
     "storybook": "^9.1.0",
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
