--- a/ui/tsconfig.app.json
+++ b/ui/tsconfig.app.json
@@ -14,6 +14,7 @@
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
